objects/MQL_Special_Reporting_Category__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Defines the owner IDs that identify special reporting categories for MQL records. Used in MQL Record Owner Change process</description>
    <fields>
        <fullName>Appliances_Americas_Inside_Sales__c</fullName>
        <description>Owner ID for Appliances Americas Inside Sales</description>
        <inlineHelpText>Owner ID for Appliances Americas Inside Sales</inlineHelpText>
        <label>Appliances Americas Inside Sales</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DND_Americas_Inside_Sales__c</fullName>
        <description>Owner ID for Americas Inside Sales</description>
        <inlineHelpText>Owner ID for Americas Inside Sales</inlineHelpText>
        <label>DND Americas Inside Sales</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DND_China_Inside_Sales__c</fullName>
        <description>Owner ID for DND China Inside Sales</description>
        <inlineHelpText>Owner ID for DND China Inside Sales</inlineHelpText>
        <label>DND China Inside Sales</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>MQL Special Reporting Category</label>
</CustomObject>